src/types/tests/snapshots/tgbot__types__tests__chat__answer_chat_join_request_query.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_join_request_query_id": "id",
  "result": "approve"
}
