src/types/tests/snapshots/tgbot__types__tests__chat__ban_chat_member-2.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "revoke_messages": true,
  "until_date": 3,
  "user_id": 2
}
