src/types/tests/snapshots/tgbot__types__tests__chat__channel_chat.snap
---
source: src/types/tests/chat.rs
expression: expected_struct
---
{
  "type": "channel",
  "id": 1,
  "title": "Channel",
  "username": "channel_username"
}
