src/types/tests/snapshots/tgbot__types__tests__chat__chat_administrator_rights-2.snap
---
source: src/types/tests/chat.rs
expression: "ChatAdministratorRights::all()"
---
{
  "can_change_info": true,
  "can_delete_messages": true,
  "can_delete_stories": true,
  "can_edit_messages": true,
  "can_edit_stories": true,
  "can_invite_users": true,
  "can_manage_chat": true,
  "can_manage_direct_messages": true,
  "can_manage_tags": true,
  "can_manage_topics": true,
  "can_manage_video_chats": true,
  "can_pin_messages": true,
  "can_post_messages": true,
  "can_post_stories": true,
  "can_promote_members": true,
  "can_restrict_members": true,
  "is_anonymous": true
}
