src/types/tests/snapshots/tgbot__types__tests__chat__chat_administrator_rights.snap
---
source: src/types/tests/chat.rs
expression: "ChatAdministratorRights::default()"
---
{
  "can_change_info": false,
  "can_delete_messages": false,
  "can_invite_users": false,
  "can_manage_chat": false,
  "can_manage_video_chats": false,
  "can_promote_members": false,
  "can_restrict_members": false,
  "is_anonymous": false
}
